--- a/app/views/slurrystorage/current/planning-permission.html
+++ b/app/views/slurrystorage/current/planning-permission.html
@@ -46,7 +46,7 @@
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="planning-permission-3" name="planning-permission" type="radio" value="Not yet applied" {{ checked("planning-permission", "Not yet applied") }}>
                 <label class="govuk-label govuk-radios__label" for="planning-permission-3">
-                  Not yet applied for but expected to be in place by 27 June 2025</label>
+                  Not yet applied for but expected to be secured before I submit my full application</label>
               </div>
             </div>
           </fieldset>
@@ -64,8 +64,7 @@
         <h2 class="app-step-nav-related__heading">
           <span class="app-step-nav-related__pretitle">Eligibility</span>
           </h2>
-          <p>You must have secured planning permission before you submit a full application. 
-
+          <p>You must have secured planning permission before you submit a full application. <br><br>The application deadline is 27 June 2025.
           </p>
           <a href="#">
           </a>
