--- a/app/views/slurrystorage/current/planning-required-condition.html
+++ b/app/views/slurrystorage/current/planning-required-condition.html
@@ -25,7 +25,7 @@
           You may be able to apply for this scheme
         </h1>
 
-        <p>You must have secured planning permission before you submit a full application.</p>
+        <p>You must have secured planning permission before you submit a full application. The application deadline is 27 June 2025.</p>
 
             <form class="form" action="{{ nextUrl }}" method="post">
               <button class="govuk-button" data-module="govuk-button">Continue</button>
