--- a/app/views/slurrystorage/current/storage-capacity-increase.html
+++ b/app/views/slurrystorage/current/storage-capacity-increase.html
@@ -65,7 +65,7 @@ Current storage capacity
       </div>
 
         {{ govukWarningText({
-          html: "This grant is to get your serviceable storage levels to 6 months. <br>For example, if you have 4 months’ serviceable storage, we will fund another 2 months. <br><br>Any capacity above 6 months is not covered by the grant.",
+          html: "This grant is to get your serviceable storage levels to 6 months. For example, if you have 4 months' serviceable storage, we will fund another 2 months. <br><br>You cannot apply for the grant if you already have 6 months' storage that is fit for purpose.",
           iconFallbackText: "Warning"
         }) }}
 {% endif %}
