--- a/app/views/slurrystorage/current/storage-capacity-increase-pig.html
+++ b/app/views/slurrystorage/current/storage-capacity-increase-pig.html
@@ -67,8 +67,7 @@ Current storage capacity
       </div>
 
         {{ govukWarningText({
-          html: "This grant is to get your serviceable storage levels to 8 months. <br>For example, if you have 4 months’ serviceable storage, we will fund another 4 months. If you have 2 months’ serviceable storage and increase to 12 months, we will fund 6 months.
-<br><br>Any capacity above 8 months is not covered by the grant.",
+          html: "This grant is to get your serviceable storage levels to 8 months. For example, if you have 6 months' serviceable storage, we will fund another 2 months.<br><br>You cannot apply for the grant if you already have 8 months' storage that is fit for purpose.",
           iconFallbackText: "Warning"
         }) }}
 {% endif %}
