--- a/app/views/robotics/index.html
+++ b/app/views/robotics/index.html
@@ -32,15 +32,25 @@
 
       <div class="proto-admin">
         <h2 class="govuk-heading-l">Design history</h2>
-        <p class='govuk-heading-m'>Version 4 (current)</p>
-          <p class='govuk-list app-list--definition'>The version shown in this prototype is currently was tested for 'new' contractor changes (including journey modifications like 'Who are you' question page).<br>
-            <span class="govuk-body govuk-!-font-size-14"># Last updated on 22 November 2021<br/>
+        <p class='govuk-heading-m'>Round 2 - Version 1 (current)</p>
+          <p class='govuk-list app-list--definition'>The version shown in this prototype includes changes to the robotics equipment pages.<br>
+            <span class="govuk-body govuk-!-font-size-14"># Last updated on 18 September 2023<br/>
             </span></p>
 
 
 
 
                       <p class='govuk-heading-m'>Previous versions</p>
+
+                      <p class='govuk-list app-list--definition'>
+                        <a href='/robotics/v3/guidance' class="govuk-link--no-visited-state">Version 5</a><br>
+                        This version was tested, and went through Accessibility review, UAT, Private beta phases and currently is live in Public beta phase.</p>
+                                    
+                      
+                      <p class='govuk-list app-list--definition'>
+                        <a href='/robotics/v3/guidance' class="govuk-link--no-visited-state">Version 4</a><br>
+                        The version shown in this prototype is currently was tested for 'new' contractor changes (including journey modifications like 'Who are you' question page).</p>
+
                       <p class='govuk-list app-list--definition'>
                         <a href='/robotics/v3/guidance' class="govuk-link--no-visited-state">Version 3</a><br>
                           The version shown in this prototype has got 'old' contractor changes in it, which concluded between 17 September 2021 and 15 October 2021.</p>
