--- a/app/views/robotics/v5/farming-type.html
+++ b/app/views/robotics/v5/farming-type.html
@@ -46,9 +46,9 @@ What is your project about?
                   checked: checked("farming-type", "Robotics and innovation")
                 },
                 {
-                  value: "Solar",
-                  text: "Solar",
-                  checked: checked("farming-type", "Solar")
+                  value: "Slurry acidification",
+                  text: "Slurry acidification",
+                  checked: checked("farming-type", "Slurry acidification")
                 }
               ]
               }) }}
