updated robotics journey

--- a/app/views/robotics/current/farming-type.html
+++ b/app/views/robotics/current/farming-type.html
@@ -41,9 +41,9 @@ What is your project about?
 
                   items: [
                 {
-                  value: "Robotics and innovation",
-                  text: "Robotics and innovation",
-                  checked: checked("farming-type", "Robotics and innovation")
+                  value: "Robotics and automation",
+                  text: "Robotics and automation",
+                  checked: checked("farming-type", "Robotics and automation")
                 },
                 {
                   value: "Solar",
