--- a/app/views/robotics/current/introducing-innovation.html
+++ b/app/views/robotics/current/introducing-innovation.html
@@ -52,7 +52,7 @@
             </div>
           </div>
 
-        <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Get your score</button>
+        <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button>
   </form>
   </div>
 
