--- a/app/views/robotics/current/project-items.html
+++ b/app/views/robotics/current/project-items.html
@@ -42,7 +42,7 @@
 <p class="govuk-hint">Select all the items your project needs</p>
   <div class="govuk-checkboxes">
     <div class="govuk-checkboxes__item">
-      <input class="govuk-checkboxes__input" id="robotic-equipment-2" name="robotic-equipment2" type="checkbox" value="Advanced ventilation control units" {{ checked("robotic-equipment2", "Advanced ventilation control units") }}>
+      <input class="govuk-checkboxes__input" id="robotic-equipment-2" name="robotic-equipment2" type="checkbox" value="Advanced ventilation control units">
       <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-2">
         Advanced ventilation control units
       </label>
@@ -52,7 +52,7 @@
     </div>
 
       <div class="govuk-checkboxes__item">
-        <input class="govuk-checkboxes__input" id="robotic-equipment-3" name="robotic-equipment2" type="checkbox" value="Wavelength-specific LED lighting" {{ checked("robotic-equipment2", "Wavelength-specific LED lighting") }}>
+        <input class="govuk-checkboxes__input" id="robotic-equipment-3" name="robotic-equipment2" type="checkbox" value="Wavelength-specific LED lighting">
         <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-3">
           Wavelength-specific LED lighting for horticultural crops
         </label>
@@ -62,7 +62,7 @@
             </div>
 
             <div class="govuk-checkboxes__item">
-              <input class="govuk-checkboxes__input" id="robotic-equipment-4" name="robotic-equipment2" type="checkbox" value="Robotic equipment item" {{ checked("robotic-equipment2", "Robotic equipment item") }}>
+              <input class="govuk-checkboxes__input" id="robotic-equipment-4" name="robotic-equipment2" type="checkbox" value="Robotic equipment item" checked>
               <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-4">
                 Robotic equipment item
               </label>
