--- a/app/views/index.html
+++ b/app/views/index.html
@@ -12,8 +12,9 @@
   Tactical grants
 </h1>
 <p>
-  Built using the latest GOV.UK Prototype Kit v13.1.1
-  <br><span class="govuk-body govuk-!-font-size-14"># migrated from v12 on 12 September 2023
+  Built using the latest GOV.UK Prototype Kit v13.0.0
+  <br><span class="govuk-body govuk-!-font-size-14"># migrated from v12 on 12 September 2023</span>
+  <br><span class="govuk-body govuk-!-font-size-14"># Read <a href='https://github.com/alphagov/govuk-prototype-kit/releases/tag/v13.0.0' class="govuk-link--no-visited-state">release notes</a>
   </span>
 </p>
 
@@ -30,9 +31,14 @@
   </thead>
   <tbody class="govuk-table__body">
     <tr class="govuk-table__row">
+      <td class="govuk-table__cell"><a href="robotics" class="govuk-lik govuk-link--no-visited-state">Improving Farm Productivity grant</a>
+        </td>
+      <td class="govuk-table__cell">Checker (R2 version 1, last updated on 18 September 2023)</td>
+    </tr>
+    <tr class="govuk-table__row">
       <td class="govuk-table__cell"><a href="slurrystorage" class="govuk-lik govuk-link--no-visited-state">Slurry infrastructure grant</a>
         </td>
-      <td class="govuk-table__cell">Checker (R2 version 2.2, last updated on 13 September 2023)</td>
+      <td class="govuk-table__cell">Checker (R2 version 2.3, last updated on 26 September 2023)</td>
     </tr>
     <tr class="govuk-table__row">
       <td class="govuk-table__cell"><a href="ahw" class="govuk-lik govuk-link--no-visited-state">
@@ -53,11 +59,7 @@
         </td>
       <td class="govuk-table__cell">Checker (v4, last updated on 30 March 2022)</td>
     </tr>
-    <tr class="govuk-table__row">
-      <td class="govuk-table__cell"><a href="robotics" class="govuk-lik govuk-link--no-visited-state">Productivity grant - Robotics and innovation</a>
-        </td>
-      <td class="govuk-table__cell">Checker (v4, last updated on 22 November 2021)</td>
-    </tr>
+
     <tr class="govuk-table__row">
       <td class="govuk-table__cell"><a href="slurry" class="govuk-lik govuk-link--no-visited-state">Productivity grant - Slurry</a>
         </td>
