--- a/app/views/slurrystorage/current/farmer-type.html
+++ b/app/views/slurrystorage/current/farmer-type.html
@@ -27,14 +27,12 @@ Farmer type
                   name: 'farmertype',
                   fieldset: {
                       legend: {
-                          text: 'What do you farm mainly?',
+                          text: 'Which livestock do you farm mainly?',
                           isPageHeading: yes,
                           classes: 'govuk-fieldset__legend--l'
                       }
                   },
-                  hint: {
-                    text: "Your main farm enterprise"
-                  },
+
 
                   items: [
                 {
@@ -78,12 +76,8 @@ Farmer type
         <h2 class="app-step-nav-related__heading">
           <span class="app-step-nav-related__pretitle">Eligibility</span>
           </h2>
-          <p class="govuk-body">This grant is for pig, beef or dairy farmers.<br><br>
-            If your main farm enterprise is pig, the grant is to get your slurry storage levels to 8 months.
-
-<br><br>  If beef or dairy is your main farm enterprise, the grant is to get your storage levels to 6 months.
-
-
+          <p class="govuk-body">If your main livestock enterprise is pig, the grant is to get your slurry storage levels to 8 months.<br><br>
+          If beef or dairy is your main livestock enterprise, the grant is to get your storage levels to 6 months.
           </p>
      </div>
    </div>
