--- a/app/views/index.html
+++ b/app/views/index.html
@@ -34,6 +34,13 @@
         </td>
       <td class="govuk-table__cell">Checker (R2 version 2.2, last updated on 13 September 2023)</td>
     </tr>
+
+    <tr class="govuk-table__row">
+      <td class="govuk-table__cell"><a href="robotics" class="govuk-lik govuk-link--no-visited-state">Productivity grant - Robotics and solar</a>
+        </td>
+      <td class="govuk-table__cell">Checker (R2 version 1, last updated on 26 September 2023)</td>
+    </tr>
+
     <tr class="govuk-table__row">
       <td class="govuk-table__cell"><a href="ahw" class="govuk-lik govuk-link--no-visited-state">
           Calf Housing for Health and Welfare Grant
@@ -53,11 +60,7 @@
         </td>
       <td class="govuk-table__cell">Checker (v4, last updated on 30 March 2022)</td>
     </tr>
-    <tr class="govuk-table__row">
-      <td class="govuk-table__cell"><a href="robotics" class="govuk-lik govuk-link--no-visited-state">Productivity grant - Robotics and innovation</a>
-        </td>
-      <td class="govuk-table__cell">Checker (v4, last updated on 22 November 2021)</td>
-    </tr>
+    
     <tr class="govuk-table__row">
       <td class="govuk-table__cell"><a href="slurry" class="govuk-lik govuk-link--no-visited-state">Productivity grant - Slurry</a>
         </td>
