--- a/app/views/robotics/current/equipment-eligibility.html
+++ b/app/views/robotics/current/equipment-eligibility.html
@@ -21,7 +21,7 @@
   
      <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
-        <form id="mainForm" class="form" action="project-cost" method="post">
+        <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
 
 
           <div class="govuk-form-group">
