--- a/app/views/robotics/current/robotic-items.html
+++ b/app/views/robotics/current/robotic-items.html
@@ -22,7 +22,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form id="mainForm" class="form" action="equipment-eligibility" method="post">
+      <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
 
 
         <div class="govuk-form-group">
