robotics journey routing fixes

--- a/app/views/robotics/current/applying.html
+++ b/app/views/robotics/current/applying.html
@@ -32,14 +32,14 @@
             <br><br>
             <div class="govuk-radios--inline">
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="applicant" name="applicant" type="radio" value="Applicant" {{ checked("applicant", "Applicant") }}>
+                <input class="govuk-radios__input" id="applicant" name="applicant" type="radio" value="Applicant">
                 <label class="govuk-label govuk-radios__label" for="applicant">
             Applicant
                 </label>
               </div>
 
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="applicant-2" name="applicant" type="radio" value="Agent" {{ checked("applicant", "Agent") }}>
+                <input class="govuk-radios__input" id="applicant-2" name="applicant" type="radio" value="Agent">
                 <label class="govuk-label govuk-radios__label" for="applicant-2">
                   Agent
                 </label>
