--- a/app/views/robotics/current/farming-type.html
+++ b/app/views/robotics/current/farming-type.html
@@ -36,18 +36,18 @@ What is your project about?
                       }
                   },
                   hint: {
-                    html: "If you want to apply for both a slurry project and a robotics project, you must submit 2 separate applications. The maximum grant amount for both projects together is £500,000.<br><br>Select one option"
+                    html: "<p>If you want to apply for both a slurry project and a robotics project, you must submit 2 separate applications.</p> <p>The maximum grant amount for both projects together is £500,000.</p>Select one option"
                 },
 
                   items: [
                 {
-                  value: "Robotics and automation",
-                  text: "Robotics and automation",
-                  checked: checked("farming-type", "Robotics and automation")
+                  value: "Robotics and automatic technology",
+                  text: "Robotics and automatic technology",
+                  checked: checked("farming-type", "Robotics and automatic technology")
                 },
                 {
                   value: "Solar",
-                  text: "Solar",
+                  text: "Solar PV system",
                   checked: checked("farming-type", "Solar")
                 }
               ]
