--- a/app/views/robotics/current/project-impact.html
+++ b/app/views/robotics/current/project-impact.html
@@ -32,13 +32,13 @@
             </legend>
             <div class="govuk-radios govuk-radios--inline">
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="project-impact" name="project-impact" type="radio" value="yes" {{ checked("project-impact", "yes") }}>
+                <input class="govuk-radios__input" id="project-impact" name="project-impact" type="radio" value="yes">
                 <label class="govuk-label govuk-radios__label" for="project-impact">
                   Yes
                 </label>
               </div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="project-impact-2" name="project-impact" type="radio" value="no" {{ checked("project-impact", "no") }}>
+                <input class="govuk-radios__input" id="project-impact-2" name="project-impact" type="radio" value="no">
                 <label class="govuk-label govuk-radios__label" for="project-impact-2">
                   No
                 </label>
