--- a/app/views/ahw/current/planning-required-condition.html
+++ b/app/views/ahw/current/planning-required-condition.html
@@ -25,7 +25,7 @@
           You may be able to apply for a grant from this scheme
         </h1>
 
-        <p>Any planning permission must be in place by 31 January 2024 (the end of the application window).</p>
+        <p>Any planning permission must be in place before you submit your full application. The application deadline is 30 April 2025.</p>
 
             <form class="form" action="{{ nextUrl }}" method="post">
               <button class="govuk-button" data-module="govuk-button">Continue</button>
