--- a/app/views/ahw/current/start.html
+++ b/app/views/ahw/current/start.html
@@ -58,7 +58,7 @@
         </div>
 
       <div class="govuk-inset-text">
-        If your project is eligible, you will be able to submit your online application to the Rural Payment Agency (RPA).
+        If your project is eligible, you will be able to submit your online application to the Rural Payments Agency (RPA)
       </div>
 
 
