--- a/app/views/ahw/index.html
+++ b/app/views/ahw/index.html
@@ -31,7 +31,7 @@
           <span class="govuk-body govuk-!-font-size-14">#Last updated on 28 September 2023
           </span>
           <ul class="govuk-list govuk-list--bullet ">
-              <li><strong>28 September 2023</strong>: Iterations (Issues 128 to 164 from <a href="https://eaflood.atlassian.net/l/cp/2NCdjrHv">Confluence</a>) is now taken forward into Private beta. Latest changes around Solar intervention rate needs testing.</li>
+              <li><strong>28 September 2023</strong>: Iterations (Issues 128 to 164 from <a href="https://eaflood.atlassian.net/l/cp/2NCdjrHv">Confluence</a>) is now taken forward into Private beta. Changes around Solar intervention rate needs testing.</li>
               </ul>
               </p>
             <p class='govuk-heading-m'>Previous versions</p>
